--- a/html/index.html
+++ b/html/index.html
@@ -19,7 +19,7 @@
             <ul>
                 <li><a href="#sobreMi">Sobre Mi</a></li>
                 <li><a href="#sec1">Proyectos</a></li>
-                <li><a href="#sec2">Contacto</a></li>
+                <li><a href="#contacto">Contacto</a></li>
             </ul>
         </div>
 
@@ -154,14 +154,15 @@
     <div id="contacto">
         <div id="contacto1">
             <h2>Contacto</h2>
-            <p>Estudiante de Ingeniería Informática en la Universidad de Granada. Me apasiona la programación y el diseño web. Me gusta aprender cosas nuevas y me considero una persona muy curiosa. Me encanta viajar y conocer lugares nuevos. </p>
+            <p>Si quieres conocerme o ver algunos de mis rpoyectos, a continuacion encontraras algunas maneras de contactar conmigo.  </p>
         </div>
 
         <div id="contacto2">
-            <i class="fa-brands fa-github"> <a>Paulaa07</a></i>
+            <i class="fa-brands fa-github"> <a href="https://github.com/paulaa07">Paulaa07</a></i>
             <!-- <i class="fa-brands fa-linkedin"> <a>pv59662@gmail.com</a></i> -->
+            <i class="fa-brands fa-instagram"> <a href="https://www.instagram.com/paula29018/">Paula29018</a></i>
             <i class="fa-solid fa-phone"> <a>619 68 27 91</a></i>
-            <i class="fa-solid fa-envelope"> <a>pv59662@gmmail.com</a></i>
+            <i class="fa-solid fa-envelope"> <a>pv59662@gmail.com</a></i>
         </div>
     </div>
 </body>
@@ -171,13 +172,13 @@
         <div class="col-md-6">
           <p>Todos los derechos reservados &copy; 2023</p>
         </div>
-        <div class="col-md-6">
+        <!-- <div class="col-md-6">
           <ul class="social-icons">
             <li><a href="#sobreMi"><i class="fab fa-facebook-f"></i></a></li>
             <li><a href="#"><i class="fab fa-twitter"></i></a></li>
             <li><a href="#"><i class="fab fa-instagram"></i></a></li>
           </ul>
-        </div>
+        </div> -->
       </div>
     </div>
   </footer>  
