--- a/html/index.html
+++ b/html/index.html
@@ -63,22 +63,22 @@
 
         <div id="fotos">
             <div class="animacion">
-                <img src="../img/logos/c++.png" alt="animacion" class="logo">
-                <img src="../img/logos/html.png" alt="animacion" class="logo">
-                <img src="../img/logos/css.png" alt="animacion" class="logo">
-                <img src="../img/logos/c.png" alt="animacion" class="logo">
+                <img src="../img/logos/c++.png" alt="c++" class="logo">
+                <img src="../img/logos/html.png" alt="html" class="logo">
+                <img src="../img/logos/css.png" alt="css" class="logo">
+                <img src="../img/logos/c.png" alt="c" class="logo">
             </div>
             <div class="animacion">
-                <img src="../img/logos/js.png" alt="animacion" class="logo">
-                <img src="../img/logos/php.png" alt="animacion" class="logo">
-                <img src="../img/logos/wamp.png" alt="animacion" class="logo">
-                <img src="../img/logos/java.png" alt="animacion" class="logo">
+                <img src="../img/logos/js.png" alt="js" class="logo">
+                <img src="../img/logos/php.png" alt="php" class="logo">
+                <img src="../img/logos/wamp.png" alt="wamp" class="logo">
+                <img src="../img/logos/java.png" alt="java" class="logo">
             </div>
             <div class="animacion" id="animacion1">
-                <img src="../img/logos/mysql.png" alt="animacion" class="logo">
-                <img src="../img/logos/github.png" alt="animacion" class="logo">
-                <img src="../img/logos/figma.png" alt="animacion" class="logo">
-                <img src="../img/logos/bootstrap.png" alt="animacion" class="logo">
+                <img src="../img/logos/mysql.png" alt="mysql" class="logo">
+                <img src="../img/logos/github.png" alt="github" class="logo">
+                <img src="../img/logos/figma.png" alt="figma" class="logo">
+                <img src="../img/logos/bootstrap.png" alt="bootstrap" class="logo">
             </div>
         </div>
     </div>
@@ -172,6 +172,13 @@
         <div class="col-md-6">
           <p>Todos los derechos reservados &copy; 2023</p>
         </div>
+        <!-- <div class="col-md-6">
+          <ul class="social-icons">
+            <li><a href="#sobreMi"><i class="fab fa-facebook-f"></i></a></li>
+            <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+            <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+          </ul>
+        </div> -->
       </div>
     </div>
   </footer>  
